Fixed callback in eventlistener. Found that addEventListener callback doesnt take parameters in base function. Fixed and now resolves correctly.

--- a/quizzes/readyState/readyState-start/index.html
+++ b/quizzes/readyState/readyState-start/index.html
@@ -37,23 +37,16 @@
              */
 
             return new Promise(function(resolve) {
-                console.log(this);
-
-                function stateCheck(state) {
-                    if (state !== 'loading') {
+                function stateCheck() {
+                    if (document.readyState !== 'loading') {
                         resolve();
                     }
-                    console.log(state);
                 }
-                document.addEventListener('readystatechange', stateCheck(document.readyState));
-                stateCheck(document.readyState);
+                document.addEventListener('readystatechange', stateCheck);
+                stateCheck();
             });
         };
 
-        /*
-        Don't forget to test your code!
-        Call wrapperResolved when the DOM is ready.
-         */
         ready().then(wrapperResolved);
 
         // Just here for your testing
